# Spidr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
SpidrWrapper/: CMakeLists.txt
SpidrWrapper/src/: SpidrBind.cpp
cmake/: BoostSetup.cmake
example/: CMakeLists.txt  SpidrExample.cpp
examples/: ArtificialImage.cpp  ArtificialImage.h  CMakeLists.txt  README.md
examples/eval/: eval_embedding.py
examples/glad/include/glad/: glad.h
examples/glad/src/: glad.c
include/: DistanceCalculation.h  FeatureExtraction.h  FeatureUtils.h  KNNDists.h  KNNUtils.h  SpidrAnalysis.h  SpidrAnalysisParameters.h  TsneComputation.h
python-wrapper/: CMakeLists.txt  README.md  setup.cfg  setup.py
python-wrapper/src/: SpidrWrapper.cpp  SpidrWrapper.h
python_wrapper/: CMakeLists.txt  README.md  setup.py
python_wrapper/example/: example.py  example_all.py  requirements.txt  utils.py
python_wrapper/src/: SpidrBind.cpp  SpidrWrapper.cpp  SpidrWrapper.h
src/: AnalysisParameters.h  DistanceCalculation.cpp  DistanceCalculation.h  EvalUtils.cpp  FeatureExtraction.cpp  FeatureExtraction.h  FeatureUtils.cpp  FeatureUtils.h  KNNDists.h  KNNUtils.cpp  KNNUtils.h  SpidrAnalysis.cpp  SpidrAnalysis.h  SpidrAnalysisParameters.cpp  TsneComputation.cpp  TsneComputation.h
